--- a/languages/stack/videos.org
+++ b/languages/stack/videos.org
@@ -1,8 +1,8 @@
-- 17 | Stanford Seminar - Concatenative Programming: From Ivory to Metal | Jon Purdy
+- 17 | Stanford Seminar - Concatenative Programming: From Ivory to Metal           | Jon Purdy
   https://www.youtube.com/watch?v=_IgqJr8jG8M
-- 17 https://vimeo.com/216476362
-- 18 https://vimeo.com/275529966
-- 23 | "Concatenative programming and stack-based languages" by Douglas Creager
+- 17 | Rediscovering Concatenative Languages with Creative Programming             | Stian Veum Møllersen https://vimeo.com/216476362
+- 18 | Concate-what? Adventures in weird programming for the discerning programmer | Stian Veum Møllersen https://vimeo.com/275529966
+- 23 | Concatenative programming and stack-based languages                         | Douglas Creager
   https://www.youtube.com/watch?v=umSuLpjFUf8
   - TODO 14:00
   - you don't use names, you don't name the values you are operating on
