--- a/languages/js/node/node.org
+++ b/languages/js/node/node.org
@@ -69,3 +69,6 @@
 | vm             | compile JavaScript code in a virtual machine            |
 | zlib           | compress or decompress files                            |
 |----------------+---------------------------------------------------------|
+
+* codebases
+- protohackers https://github.com/borisovg/protohackers-ts
