--- a/algos/algos.org
+++ b/algos/algos.org
@@ -37,7 +37,7 @@
     - https://www.datawars.io/
   - Projects
     - https://github.com/codecrafters-io/build-your-own-x
-    - https://github.com/AlgoryL/Projects-from-Scratch
+    - books https://github.com/AlgoryL/Projects-from-Scratch
     - https://github.com/practical-tutorials/project-based-learning
     - https://austinhenley.com/blog/challengingalgorithms.html
     - https://austinhenley.com/blog/morechallengingprojects.html
